--- a/footer.css
+++ b/footer.css
@@ -71,7 +71,7 @@
 .bottomSection {
   display: flex;
   justify-content: center;
-  background: #051d40;
+  background: #512573;
   padding: 1em;
   color: white;
   flex-direction: column;
