--- a/public/footer.css
+++ b/public/footer.css
@@ -6,7 +6,7 @@
   font-size: 18px;
   border: 1px solid white;
   outline: none;
-  background-color: #051d40;
+  background-color: #512573;
   color: white;
   cursor: pointer;
   padding: 15px;
